--- a/_posts/2023-12-24-swimming-2023.markdown
+++ b/_posts/2023-12-24-swimming-2023.markdown
@@ -19,7 +19,8 @@ categories: blog
 ![Swimming 2023 - duration distance](/assets/swimming2023-duration-distance.png)
 
 ### 記録
-* 30分でできるだけ長い距離を泳ぐことを目標にしている。まずは1000mを目標にした。その後、1200m, 1300m, 1400mと徐々に記録を伸ばして、今は1500mまで泳げる。泳ぎ始めた頃は、30分1500mなんてはるか遠い遠い目標だったので、まさか達成できるとは思っていなかった。1300mを達成した時でさえ思っていなかった。次の目標は30分1600mだが、かなり厳しい。現在は、30分1600mのペース(1m53s/100m)で1000mまでは泳ぐことができている。30分での達成日と達成理由は次の通り。
+* 30分でできるだけ長い距離を泳ぐことを目標にしている。まずは1000mを目標にした。その後、1200m, 1300m, 1400mと徐々に記録を伸ばして、今は1500mまで泳げる。泳ぎ始めた頃は、30分1500mなんてはるか遠い遠い目標だったので、まさか達成できるとは思っていなかった。1300mを達成した時でさえ思っていなかった。次の目標は30分1600mだが、かなり厳しい。現在は、30分1600mのペース(1m53s/100m)で1000mまでは泳ぐことができている。
+* 30分での達成日と達成理由は次の通り。
   * 1000m: 2023/01/30 (水泳の習慣化)
   * 1200m: 2023/03/25 (水泳の継続)
   * 1300m: 2023/07/07 (休憩せずに泳ぐ、タッチターンをちゃんとする)
@@ -45,3 +46,5 @@ categories: blog
   * 自分の進捗をTweetしたら、アドバイスや応援をもらえて、モチベーション維持に助かった。
 
 
+### 参考
+* [nnakadozono/parser_for_swimming](https://github.com/nnakadozono/parser_for_swimming)
