--- a/_posts/2023-12-26-contents-2023.markdown
+++ b/_posts/2023-12-26-contents-2023.markdown
@@ -12,6 +12,10 @@ categories: blog
   * 双子がユーラシア大陸を旅する。無事にゴールした。
   * オススメ。[【混沌】カオスな旧市街オールドダッカ散策、船がひしめくショドルガット。【ユーラシア大陸横断＃10】 - YouTube](https://www.youtube.com/watch?v=3F9CdGGwBBw)
 
+水泳
+* [茂木慧太 studio景 〜昨日までの自分を超えていく身体に〜 - YouTube](https://www.youtube.com/@kit99fly)
+* [KAT-TV - YouTube](https://www.youtube.com/@KATTV0418)
+
 トレラン
 * [ガチオのランチャン - YouTube](https://www.youtube.com/@gachio)
 * [Gao ただ走るだけの動画 - YouTube](https://www.youtube.com/@gao_trailrunning)
